Make 'random' endpoint return whole song object
