# src/pages/api/songs/random.ts
@@ -1,10 +1,11 @@
 // Next.js API route support: https://nextjs.org/docs/api-routes/introduction
 import type { NextApiRequest, NextApiResponse } from "next";
 import * as SearchService from "../../../services/search";
+import Song from "../../../types/song";
 
 export default function handler(
   req: NextApiRequest,
-  res: NextApiResponse<string>
+  res: NextApiResponse<Song>
 ) {
-  res.status(200).send(SearchService.getRandom().title);
+  res.status(200).json(SearchService.getRandom());
 }
